Agregado ejercicios de probabilidad

--- a/notebook/problems.es.ipynb
+++ b/notebook/problems.es.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "id": "8939d892",
    "metadata": {},
    "outputs": [
@@ -32,13 +32,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "La probabilidad estimada de que la suma sea mayor a 7 o que sea numero par:  0.0010\n"
+      "La probabilidad estimada de que la suma sea mayor a 7 o que sea numero par:  0.0000\n"
      ]
     }
    ],
    "source": [
     "# TODO\n",
     "import random\n",
+    "import numpy as np\n",
     "\n",
     "tiradas = 1000\n",
     "conteo = 0\n",
@@ -73,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 32,
    "id": "23244d20",
    "metadata": {},
    "outputs": [
@@ -82,9 +83,8 @@
      "output_type": "stream",
      "text": [
       "{0: 'White', 1: 'White', 2: 'White', 3: 'White', 4: 'White', 5: 'White', 6: 'White', 7: 'White', 8: 'White', 9: 'White', 10: 'Red', 11: 'Red', 12: 'Red', 13: 'Red', 14: 'Red', 15: 'Red', 16: 'Red', 17: 'Red', 18: 'Red', 19: 'Red', 20: 'Red', 21: 'Red', 22: 'Red', 23: 'Red', 24: 'Red', 25: 'Red', 26: 'Red', 27: 'Red', 28: 'Red', 29: 'Red', 30: 'Green', 31: 'Green', 32: 'Green', 33: 'Green', 34: 'Green', 35: 'Green', 36: 'Green', 37: 'Green', 38: 'Green', 39: 'Green', 40: 'Green', 41: 'Green', 42: 'Green', 43: 'Green', 44: 'Green', 45: 'Green', 46: 'Green', 47: 'Green', 48: 'Green', 49: 'Green', 50: 'Green', 51: 'Green', 52: 'Green', 53: 'Green', 54: 'Green', 55: 'Green', 56: 'Green', 57: 'Green', 58: 'Green', 59: 'Green'}\n",
-      "\n",
-      "Probabilidad de obtener 3 blancas y 2 rojas: 0.0060\n",
-      "Probabilidad de obtener todas del mismo color: 0.0400\n"
+      "La probabilidad de obtener 3 pelotas blancas y 2 rojas es: 1.2%\n",
+      "La probabilidad de que todas las pelotas sean del mismo color es: 2.7%\n"
      ]
     }
    ],
@@ -104,32 +104,34 @@
     "            \n",
     "# TODO\n",
     "\n",
-    "simulaciones = 1000\n",
-    "conteo_3_blancas_2_rojas = 0\n",
-    "conteo_todas_mismo_color = 0\n",
+    "def take_balls(n_simulations = 1000):\n",
+    "    count_1 = 0\n",
+    "    count_2 = 0\n",
     "\n",
-    "for i in range(simulaciones):\n",
-    "    seleccion = [ball_box[random.randint(0, 59)] for i in range(5)]\n",
-    "    \n",
-    "    \n",
-    "    blancas = seleccion.count(\"White\")\n",
-    "    rojas = seleccion.count(\"Red\")\n",
-    "    verdes = seleccion.count(\"Green\")\n",
-    "    \n",
-    "    \n",
-    "    if blancas == 3 and rojas == 2:\n",
-    "        conteo_3_blancas_2_rojas += 1\n",
-    "    \n",
-    "    \n",
-    "    if blancas == 5 or rojas == 5 or verdes == 5:\n",
-    "        conteo_todas_mismo_color += 1\n",
+    "    for i in range(n_simulations):\n",
+    "        colors = []\n",
     "\n",
+    "        for i in range(5):\n",
+    "            colors.append(ball_box[np.random.randint(0, 59)])\n",
     "\n",
-    "probabilidad_3_blancas_2_rojas = conteo_3_blancas_2_rojas / simulaciones\n",
-    "probabilidad_todas_mismo_color = conteo_todas_mismo_color / simulaciones\n",
+    "        colors = np.array(colors)\n",
+    "        \n",
+    "        white_balls = sum(colors == \"White\")\n",
+    "        red_balls = sum(colors == \"Red\")\n",
+    "        green_balls = sum(colors == \"Green\")\n",
     "\n",
-    "print(f\"\\nProbabilidad de obtener 3 blancas y 2 rojas: {probabilidad_3_blancas_2_rojas:.4f}\")\n",
-    "print(f\"Probabilidad de obtener todas del mismo color: {probabilidad_todas_mismo_color:.4f}\")\n"
+    "        if (white_balls == 3) and (red_balls == 2):\n",
+    "            count_1 += 1\n",
+    "        \n",
+    "        if (white_balls == 5) or (red_balls == 5) or (green_balls == 5):\n",
+    "            count_2 += 1\n",
+    "    \n",
+    "    return count_1 / n_simulations, count_2 / n_simulations\n",
+    "\n",
+    "probabilities = take_balls(1000)\n",
+    "\n",
+    "print(f\"La probabilidad de obtener 3 pelotas blancas y 2 rojas es: {np.round(probabilities[0] * 100, 2)}%\")\n",
+    "print(f\"La probabilidad de que todas las pelotas sean del mismo color es: {np.round(probabilities[1] * 100, 2)}%\")"
    ]
   }
  ],
